# esp32-ble-kbd-host

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
examples/basic_usage/: CMakeLists.txt  sdkconfig.defaults
examples/basic_usage/main/: CMakeLists.txt  idf_component.yml  main.c
include/: esp_ble_kbd_host.h
src/: bt_kbd.c  hid_gap.c  hid_gap.h
